--- a/settings/project.json
+++ b/settings/project.json
@@ -29,7 +29,7 @@
     "height": 640,
     "width": 960
   },
+  "start-scene": "71c1827d-e378-4609-8c89-c43bd49bb66d",
   "use-customize-simulator": true,
-  "use-project-simulator-setting": false,
-  "start-scene": "current"
+  "use-project-simulator-setting": false
 }
